fix some css for the linup on mobile

--- a/src/scss/_artists.scss
+++ b/src/scss/_artists.scss
@@ -29,8 +29,8 @@
 
   .lineup {
     max-width: 1000px;
-    width: 80vw;
-    margin-bottom: 20vh;
+    width: 90vw;
+    margin-bottom: 64px;
   }
 
   .artist-names {
